--- a/nextjs13-firstproject/package.json
+++ b/nextjs13-firstproject/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "18.16.2",
-    "@types/react": "18.2.0"
+    "@types/react": "18.2.0",
+    "sass": "^1.62.1"
   }
 }
